--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,7 @@
     <script src="scripts/filters/cut-word.js"></script>
     <!-- endbuild -->
 
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAyfsZ_Ly_ZQdi0PyHoo9ecCmtq3-9uWLI"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAyfsZ_Ly_ZQdi0PyHoo9ecCmtq3-9uWLI"></script>
     <link rel="stylesheet" href="https://s3-sa-east-1.amazonaws.com/efinding/style/editable.css">
 </body>
 </html>
